# engineering_AI

./: .gitignore  CLIENT-SETUP.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-READINESS-REPORT.md  DEPLOYMENT.md  NVIDIA-TOOLKIT-SETUP.md  QUICK-DEPLOY.md  QUICKSTART.md  README.md  SERVER-SETUP.md  docker-compose.no-gpu.yml  docker-compose.yml  requirements_register.csv  requirements_register.jsonl  requirements_register.xlsx  test.sh  ревью требований промт.txt
.cursor/.agent-tools/: export_stats_2.json  gen_jsonl_stats.json  (+11 more)
app/: .gitignore  README.md  index.html  main.js  package.json  preload.js  renderer.js
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  main.py  ollama_client.py  schemas.py
backend/src/ba_ai_gost_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/services/: __init__.py  console_json_ollama.py  console_vision_ollama.py  dxf_console_service.py  dxf_service.py  image_file_router.py  json_file_router.py  json_service.py  ollama_service.py  vision.py
backend/src/services/file_handlers/: __init__.py  arp_upload_service.py  dxf_console_service.py  gsfx_upload_service.py  image_upload_service.py  pdf_upload_service.py  rtf_upload_service.py  xlsx_upload_service.py
backend/src/services/utils/: compat_asyncio.py
documentation/: README.md
ollama/: README.md
scripts/: check-deployment-ready.sh  deploy-to-immers.sh
tools/: export_requirements_simple.py  generate_requirements_jsonl.py  generate_requirements_register.py  requirements_review_helper.py  requirements_review_helper_jsonl.py
(+128 files in other folders)
