[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ba_ai_gost_backend"
version = "0.1.0"
description = "Local FastAPI backend for BA AI GOST with Ollama"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "ezdxf>=1.4.2",
  "pandas>=2.0.0",
  "pypdfium2>=4.27.0",
  "pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.0"
]

[tool.ruff]
line-length = 100
target-version = "py39"
